@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

class Student {
-String year
-ModuleList currentSemesterModules

+getSchedule()
+setFirstMajor(String userInput)
+timetableShowOrModify(String argument)
+updateTimetable()
-setCurrentSemesterModules()
-setCurrentSemesterModulesWeekly()
}

Student --> "1" Schedule

class Schedule {
int[] modulesPerSem;
ModuleList modulesPlanned;
}

Schedule --> "modulesPlanned" ModuleList

class ModuleList {
ArrayList<Module>
}

Student --> "1" Timetable

class Timetable {
ArrayList <ModuleWeekly> currentSemesterModulesWeekly
}


class ModuleServiceController {

}


@enduml